# toolbox-tray-icon

./: .gitignore  .travis.yml  README.md  stack-lts-5.yaml  stack-lts-9.yaml  stack.yaml  toolbox.cabal
data/: toolbox-menu.json.example
data/icons/: README.md  elegantthemes-beautiful-flat-icons-tools-icon.png.download  elegantthemes-tools-icon.png.download  guillendesign-variations-3-tools-icon.png.download  judge-iphone-tools-icon.png.download  rade8-minimum2-sidebar-utilities-icon.png.download  soborne-avalon-utilities-icon.png.download  xenatt-the-circle-icons-folder-utilities-icon.png.download
src/: GtkMain.hs  Main.hs  WxMain.hs
src/Main/: ConfigFile.hs  Options.hs
src/Main/Type/: MenuItem.hs  Options.hs
src/Main/Type/MenuItem/: Lens.hs
src/Main/Type/Options/: Lens.hs
