name:                   toolbox
version:                0.1.0.0
synopsis:               Tray icon with configurable popup menu
-- description:
homepage:               https://github.com/trskop/toolbox
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015 Peter Trško
category:               Utility
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

data-dir:               data
data-files:             icons/*.png, toolbox-menu.json

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

executable toolbox
  hs-source-dirs:       src
  main-is:              Main.hs

  other-modules:
      Main.ConfigFile
    , Main.Options
    , Main.Type.MenuItem
    , Main.Type.MenuItem.Lens
    , Main.Type.Options
    , Main.Type.Options.Lens

  default-language:     Haskell2010
  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , NoImplicitPrelude
    , QuasiQuotes

  build-depends:
      base >=4.6 && <5
    , bytestring
    , filepath
    , process
    , transformers

    , aeson
    , data-default-class ==0.0.*
    , endo
    , gtk >= 0.10.0
    , here
    , lens
    , optparse-applicative

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror
