name:                   toolbox
version:                0.1.0.0
synopsis:               Tray icon with configurable popup menu
-- description:
homepage:               https://github.com/trskop/toolbox-tray-icon
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015, Peter Trško
category:               Utility
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    ChangeLog.md
  , README.md
  , data/icons/*.png.download
  -- ^ These files contain information about icons, most importantly where they
  -- were downloaded from, author and license.
  , screenshot/*.png

data-dir:               data
data-files:             icons/*.png, toolbox-menu.json

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

executable toolbox-gtk
  hs-source-dirs:       src
  main-is:              GtkMain.hs

  other-modules:
      Main.ConfigFile
    , Main.Options
    , Main.Type.MenuItem
    , Main.Type.MenuItem.Lens
    , Main.Type.Options
    , Main.Type.Options.Lens

  default-language:     Haskell2010
  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , NoImplicitPrelude
    , QuasiQuotes

  build-depends:
      base >=4.6 && <5
    , bytestring
    , filepath
    , process
    , transformers

    , aeson
    , data-default-class ==0.0.*
    , endo
    , here
    , lens
    , optparse-applicative
    , xdg-basedir

    -- {{{ GTK-specific dependencies ------------------------------------------
    , gtk >= 0.10.0
    -- ^ Lower bound is just u guess. Tested with gtk-0.13.4.
    -- }}} GTK-specific dependencies ------------------------------------------

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror

executable toolbox-wx
  hs-source-dirs:       src
  main-is:              WxMain.hs

  other-modules:
      Main.ConfigFile
    , Main.Options
    , Main.Type.MenuItem
    , Main.Type.MenuItem.Lens
    , Main.Type.Options
    , Main.Type.Options.Lens

  default-language:     Haskell2010
  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , NoImplicitPrelude
    , QuasiQuotes

  build-depends:
      base >=4.6 && <5
    , bytestring
    , filepath
    , process
    , transformers

    , aeson
    , data-default-class ==0.0.*
    , endo
    , here
    , lens
    , optparse-applicative
    , xdg-basedir

    -- {{{ wx-specific dependencies -------------------------------------------
    , wx >= 0.91.0.0
    , wxcore >= 0.91.0.0
    -- ^ Lower bound is the latest version at the time of writing.
    -- }}} wx-specific dependencies -------------------------------------------

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror

source-repository head
  type:                 git
  location:             git://github.com/trskop/toolbox-tray-icon.git
